# label-studio-mcp-server

./: .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml  release-notes-v1.1.0.md  release-notes-v1.1.1.md  release-notes-v1.3.0.md
.claude/commands/: release.md
.github/workflows/: gitleaks.yml  release-mcpb.yml  tests.yml
docs/: troubleshooting.md  user-guide.md
label_studio_mcp/: errors.py  main.py  mcp_env.py  mcp_server.py  serialization.py  server.py  validation.py
label_studio_mcp/tools/: __init__.py  actions.py  annotations.py  comments.py  config_gen.py  llm_labeling.py  ml_backends.py  predictions.py  projects.py  resources.py  statistics.py  tasks.py  users.py  views.py  webhooks.py  workspaces.py
scripts/: bump_version.py
tests/: test_config_gen.py  test_llm_labeling.py  test_serialization.py  test_validation.py  test_warmup.py
