[project]
name = "label-studio-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Label Studio"
authors = [
    { name = "DL-Solution" },
    { name = "HumanSignal", email = "support@humansignal.com" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "label-studio-sdk>=1.0.11",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.12.0",
    "pip-system-certs>=4.0",
    "protego>=0.4.0",
    "readabilipy>=0.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-label-studio = "label_studio_mcp.main:main"

[project.urls]
Home = "https://github.com/DL-Solution/label-studio-mcp-server"
Upstream = "https://github.com/HumanSignal/label-studio-mcp-server"

[tool.setuptools]
packages = ["label_studio_mcp"]