[project]
name = "label-studio-mcp"
version = "1.2.1"
description = "A Model Context Protocol (MCP) server for Label Studio"
authors = [
    { name = "DL-Solution" },
    { name = "HumanSignal", email = "support@humansignal.com" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
# Upper bound: a transitive dependency (Pillow, via label-studio-sdk) only ships
# prebuilt wheels for CPython <= 3.13. Without this cap, `uv` may select Python
# 3.14+ on a user's machine and fall back to building Pillow from source, which
# fails without a C toolchain (see the desktop-bundle install error reports).
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "label-studio-sdk>=1.0.11",
    "mcp[cli]>=1.12.0",
    "pip-system-certs>=4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-label-studio = "label_studio_mcp.main:main"

[project.urls]
Home = "https://github.com/DL-Solution/label-studio-mcp-server"
Upstream = "https://github.com/HumanSignal/label-studio-mcp-server"

[tool.setuptools.packages.find]
include = ["label_studio_mcp*"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]